--- a/app/src/main/res/layout/item_movie_review_layout.xml
+++ b/app/src/main/res/layout/item_movie_review_layout.xml
@@ -1,9 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+
+        <variable
+            name="model"
+            type="com.app.data.model.MovieReviewItemModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:layout_margin="16dp"
+            android:id="@+id/img_placeholder"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            app:actualImageScaleType="focusCrop"
+            app:fadeDuration="300"
+            app:failureImage="@drawable/ic_placeholder"
+            app:failureImageScaleType="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:placeholderImage="@drawable/ic_placeholder"
+            app:placeholderImageScaleType="fitCenter"
+            app:progressBarAutoRotateInterval="200"
+            app:progressBarImage="@drawable/ic_loading"
+            app:progressBarImageScaleType="centerInside"
+            app:retryImageScaleType="centerCrop"
+            app:roundBottomLeft="true"
+            app:roundBottomRight="true"
+            app:roundTopLeft="true"
+            app:roundTopRight="true"
+            app:roundWithOverlayColor="@color/gray"
+            app:roundedCornerRadius="2dp"
+            app:roundingBorderColor="@color/white" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/txt_author"
+            style="@style/TextAppearance.MaterialComponents.Caption"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_width="wrap_content"
+            android:text="@{model.movieReviewEntity.review_by}"
+            app:layout_constraintStart_toEndOf="@id/img_placeholder"
+            app:layout_constraintTop_toBottomOf="@id/txt_title"
+            tools:text="Uma Shankar" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/txt_title"
+            style="@style/TextAppearance.MaterialComponents.Subtitle1"
+            app:layout_constrainedWidth="true"
+            android:layout_marginEnd="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@{model.movieReviewEntity.headline}"
+            app:layout_constraintStart_toEndOf="@id/img_placeholder"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Uma Shanka jhagsjhgasjagjhsjhagshjr" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/txt_date"
+            style="@style/TextAppearance.MaterialComponents.Caption"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_width="wrap_content"
+            android:text="@{model.movieReviewEntity.opening_date}"
+            app:layout_constraintStart_toEndOf="@id/img_placeholder"
+            app:layout_constraintTop_toBottomOf="@id/txt_author"
+            tools:text="Uma Shankar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
